Update 'v9ue3obsc-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-65f5d81a36.6l52.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:d71e2006d3ae32dfe257a28f3d0d0af815c9bb39@sha256:c790ac5a4c042e93223c1f598e03c1de0bd75be60c03b757be56e55cccd6538f

--- a/components/v9ue3obsc-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/v9ue3obsc-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: v9ue3obsc-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-65f5d81a36.6l52.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:d71e2006d3ae32dfe257a28f3d0d0af815c9bb39@sha256:c790ac5a4c042e93223c1f598e03c1de0bd75be60c03b757be56e55cccd6538f
+          name: container-image
